# qt-syntax-highlighter

./: CMakeLists.txt  README.md
src/: highlighter.cpp  highlighter.h  highlighter.qrc  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  qhighlighter.cpp  qhighlighter.h
src/core/: TextArea.qml
